# polyglot-engineer-blog

./: .gitignore  .markdownlint  .pre-commit-config.yaml  404.html  README.md  index.html  justfile  main.py  mkdocs.yml  pyproject.toml  ruff.toml  sitemap.xml  track_guide_creation.sh
.github/workflows/: deploy.yml
about/: index.html
blog/: index.html
blog/2026-01-11-getting-started-with-uv:-build-a-text-processing-app/: index.html
blog/archive/2026/: index.html
blog/category/blog/: index.html
blog/category/devops/: index.html
blog/category/python/: index.html
blog/category/tools/: index.html
blog/category/tutorial/: index.html
docs/: about.md  index.md
docs/blog/: .authors.yml  2026-01-11-getting-started-with-uv:-build-a-text-processing-app.md  2026-01-28-getting-started-with-just-the-task-runner-you-need.md  index.md
docs/blog/posts/: 2026-01-11-getting-started-with-uv-build-a-text-processing-app.md  2026-01-28-getting-started-with-just-the-task-runner-you-need.md  (+2 more)
docs/guides/: index.md  the-complete-guide-to-uv-for-python-development.md
docs/projects/: index.md
docs/resources/: index.md
docs/tutorials/: from-makefile-to-just.md  index.md
guides/: index.html
guides/the-complete-guide-to-uv-for-python-development/: index.html
projects/: index.html
resources/: index.html
resources/data-science/: index.html
resources/mlops/: index.html
resources/programming/: index.html
resources/tools/: index.html
search/: search_index.json
tutorials/: index.html
tutorials/from-makefile-to-just/: index.html
(+63 files in other folders)
